test/should_fail/inh_model_004.gm
node class A extends B;
node class B extends C;
node class C extends A;
